# mvp_control

./: CMakeLists.txt  README.md  package.xml
cfg/: dynamic_reconfigure_pid.cfg
config/: control.yaml
include/mvp_control/: dictionary.h  dictionary.hpp  fin_ros.hpp  mimo_pid.hpp  mvp_control.hpp  mvp_control_ros.hpp  thruster_ros.hpp
src/: mvp_control_ros_node.cpp
src/mvp_control/: fin_ros.cpp  mimo_pid.cpp  mimo_pid.h  mvp_control.cpp  mvp_control_ros.cpp  mvp_control_ros.h  polynomial_solver.cpp  thruster_ros.cpp
